--- a/app/views/links/show.html.erb
+++ b/app/views/links/show.html.erb
@@ -23,13 +23,12 @@
         <p class="text-gray-700 font-semibold">Short URL:</p>
         <p><%= @link.slug %></p>
       </div>
-      
+      <hr class="border-gray-200 my-2">
 
       <div class="flex justify-between items-center">
         <p class="text-gray-700 font-semibold">Type:</p>
         <p><%= @link.type %></p>
       </div>
-      <!-- Agregar líneas similares para otros campos con hr en medio -->
 
       <% if @link.name.present? %>
         <hr class="border-gray-200 my-2">
@@ -46,7 +45,11 @@
           <p><%= @link.expiration_date %></p>
         </div>
       <% end %>
-
+      <br/>
+      <div class="flex justify-between items-center">
+        <p class="text-gray-700 font-semibold">Full URL:</p>
+        <p class="text-gray-500 font-semibold"><%= request.base_url + '/link/' + @link.slug %></p>
+      </div>
     </div>
     <br/>
     <div class="flex justify-between p-6 space-x-2">
@@ -54,7 +57,7 @@
       <%= link_to "Accesses by Day", daily_accesses_link_path(@link), class: "flex-1 mt-4 rounded-lg py-3 px-5 bg-blue-600 text-white font-medium mx-2" %>
       <%= link_to "Access Details", list_accesses_link_path(@link), class: "flex-1 mt-4 rounded-lg py-3 px-5 bg-blue-600 text-white font-medium mx-2" %>
       <%= link_to "Edit", edit_link_path(@link), class: "flex-1 rounded-lg py-3 px-5 bg-gray-100 text-gray-800 font-medium mx-2" %>
-      <%= button_to "Destroy", link_path(@link), method: :delete, class: "flex-1 rounded-lg py-3 px-5 bg-gray-100 text-black font-medium mx-2", id: "destroy-link" %>
+      <%= button_to "Destroy", link_path(@link), method: :delete, class: "flex-1 rounded-lg py-3 px-5 bg-gray-100 text- font-medium mx-2", id: "destroy-link" %>
     </div>
 
     <div class="p-6">
@@ -73,6 +76,7 @@ document.addEventListener('DOMContentLoaded', function () {
       event.preventDefault();
     }
   });
+
 });
 </script>
 
