--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -37,9 +37,9 @@
     </div>
     <br/>
     <div class="mt-4">
-      <%= f.submit "Update", class: "w-full px-4 py-2 bg-green-500 text-gray rounded-md hover:bg-blue-600 focus:outline-none focus:shadow-outline-blue active:bg-blue-800" %>
+      <%= f.submit "Update", class: "w-full px-4 py-2 bg-blue-600 text-white rounded-md hover:bg-blue-600 focus:outline-none focus:shadow-outline-blue active:bg-blue-800" %>
     </div>
   <% end %>
 
-  <%= link_to "Back", :back, class: "block mt-4 text-blue-500 hover:underline" %>
+  <%= link_to "Back", :back, class: "block mt-4 bg-gray-100 text-gray-800 hover:underline" %>
 </div>
