--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -1,6 +1,12 @@
 <div class="w-full">
+  <% if flash[:error].present? %>
+    <p class="py-2 px-4 bg-red-50 text-red-500 font-medium rounded-md mb-4"><%= flash[:error] %></p>
+  <% end %>
+
+  <div class="bg-white rounded-md overflow-hidden shadow-md">
+
   <% if notice.present? %>
-    <p class="py-2 px-3 bg-green-50 mb-5 text-green-500 font-medium rounded-lg inline-block" id="notice"><%= notice %></p>
+    <p class="py-2 px-4 bg-green-50 text-green-500 font-medium rounded-t-md"><%= notice %></p>
   <% end %>
 
   <div class="flex justify-between items-center mb-6">
@@ -14,7 +20,7 @@
       <thead>
         <tr>
           <th class="py-2 px-4 border-b">Original URL</th>
-          <th class="py-2 px-4 border-b">Short URL</th>
+          <th class="py-2 px-4 border-b">Slug</th>
           <th class="py-2 px-4 border-b">Type</th>
           <th class="py-2 px-4 border-b">Name</th>
           <th class="py-2 px-4 border-b"></th>
