--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,7 +18,20 @@
     <br/>
     <div class="flex justify-center">
       <%= link_to "Edit Account", edit_user_registration_path(current_user), class: "bg-blue-600 text-white py-2 px-4 rounded-md mr-4" %>
-      <%= button_to "Cancel my account", registration_path(current_user), data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete, class: "bg-gray-100 text-black py-2 px-4 rounded-md" %>
+      <%= button_to "Delete Account", registration_path(current_user), method: :delete, class: "bg-gray-100 text-black py-2 px-4 rounded-md", id: "destroy_account" %>
     </div>
   </div>
 </div>
+
+<script>
+document.addEventListener('DOMContentLoaded', function () {
+  const destroyButton = document.getElementById('destroy_account');
+
+  destroyButton.addEventListener('click', function (event) {
+    if (!confirm("Are you sure?")) {
+      event.preventDefault();
+    }
+  });
+
+});
+</script>
